Updated the overflow issues in grey backgrounds and added hover animation for company logos and images

--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,27 @@
-*{ margin: 0; padding: 0%; box-sizing: border-box;}
+*, *::after, *::before
+{ margin: 0; padding: 0%; box-sizing: border-box;}
+
+
 
 .graybg{
-  background-color: hsl(240, 5%, 30%);
   position: relative;
+  background-color: hsl(240, 5%, 30%);
+  /* box-shadow: 0 0 0 100vmax hsl(240, 5%, 30%);
+  clip-path: inset(0 -100vmax);  */
 }
 
 .graybg::after{
   content: "";
   position: absolute;
-  background-color: inherit;
-  width: 200vw;
-  height: 100%;
+  top:0;
+  right:-50vw;
+  bottom:0;
+  left:-3.5rem;
+  width: 100vw;
+  /* margin: 0 -50%; */
+  transform: translateX(-50%);
   z-index: -1;
-  inset: 0;
-  left: -50vw; 
-  /* right: -50vw; */
+  background-color: inherit;
 }
 
 body{
@@ -128,6 +135,11 @@ p{
 
 .companies > *{
   flex-basis: min(20%, 120px);
+  transition: .2s scale ease;
+}
+
+.companies > *:hover{
+  scale: 1.2;
 }
 
 .group{
@@ -138,7 +150,21 @@ p{
 
 .group img{
   width: 100%;
+  object-fit: cover;
+  filter: grayscale(25);
+  transition: .2s all ease;
 }
+
+.group img:hover{
+  scale: 1.1;
+  filter: none;
+}
+
+.group .img{
+  width: 100%;
+  overflow: hidden;
+}
+
 .group > section{
   padding: 3rem 0;
   width: 100%;
@@ -181,6 +207,10 @@ footer{
   justify-content: space-between;
   padding: 1rem 0;
   gap: 20px;
+  background-color: hsl(240, 5%, 30%);
+  box-shadow: 0 0 0 100vmax hsl(240, 5%, 30%);
+  clip-path: inset(0 -100vmax); 
+  
 }
 
 footer h3{
@@ -249,6 +279,10 @@ footer i:hover{
     background-color: #333;
     flex-direction: column;
     transition: .2s all linear;
+  }
+
+  .group .img img{
+    filter: none;
   }
 
 }
